# NovaShield-NGFW-AI-Powered-Next-Generation-Firewall

./: .dockerignore  .gitignore  Cargo.toml  PROJECT_COMPLETE_DETAILS.txt  README.md  START_NOVASHIELD.bat  STOP_NOVASHIELD.bat  docker-compose.yml  tech_stack.txt
ai_engine/: Dockerfile  feature_extractor.py  main.py  model.py  requirements.txt
ai_engine/model/: retrain_model.py  test_allow_block.py  test_model.py  train.ipynb
ai_engine/tests/: test_predict.py
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
config/: backend.json  gateway.docker.json  gateway.json  gateway_test.json
dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
dashboard/src/: App.jsx  styles.css
docker/: .env.example
gateway/: Cargo.toml  Dockerfile
gateway/src/: ai_client.rs  auth.rs  config.rs  main.rs  metrics.rs  proxy.rs  redis_store.rs  security.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: 01-health.ps1  02-login.ps1  03-auth-flow.ps1  04-security.ps1  05-rate-limit.ps1  06-load.ps1  07-metrics.ps1  08-websocket.ps1  09-ai-enforcement.ps1  common.ps1  full_attack_test.ps1  integration_test.py  run-all.ps1
